# domashka_07

./: config.ini  my_select.py  pyproject.toml  seed.py
migrations/versions/: f9a582acb987_init.py
src/: db.py  models.py
